--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ permissions:
   pull-requests: write
 
 env:
-  GO_VERSION_MATRIX: '["1.22", "1.23"]'
+  GO_VERSION_MATRIX: '["1.24"]'
 
 jobs:
   test:
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        go-version: [1.22, 1.23]
+        go-version: [1.24]
 
     steps:
     - name: Checkout code
@@ -51,7 +51,7 @@ jobs:
       run: make test
 
     - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.23'
+      if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.24'
       uses: codecov/codecov-action@v4
       with:
         file: ./coverage.out
@@ -71,7 +71,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: '1.24'
         cache: true
         cache-dependency-path: go.sum
 
@@ -104,7 +104,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: '1.24'
         cache: true
         cache-dependency-path: go.sum
 
@@ -112,15 +112,13 @@ jobs:
       run: make deps
 
     - name: Install security tools
-      run: |
-        go install golang.org/x/vuln/cmd/govulncheck@latest
-        go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+      run: make install-tools
 
     - name: Run govulncheck
-      run: govulncheck ./...
+      run: go tool govulncheck ./...
 
     - name: Run gosec
-      run: gosec -fmt sarif -out gosec-results.sarif ./...
+      run: go tool gosec -fmt sarif -out gosec-results.sarif ./...
       continue-on-error: true
 
     - name: Upload SARIF file
@@ -184,7 +182,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: '1.24'
         cache: true
 
     - name: Install dependencies
