--- a/.envrc
+++ b/.envrc
@@ -5,9 +5,13 @@ if ! has nix_direnv_version || ! nix_direnv_version 2.3.0; then
   source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/2.3.0/direnvrc" "sha256-Dmd+j63L84wuzgyjITIfSxSD57Tx7v51DMxVZOsiUD8="
 fi
 
-# Watch for changes to flake files
+# Load environment variables from .env file if it exists
+dotenv
+
+# Watch for changes to flake files and environment
 watch_file flake.nix
 watch_file flake.lock
+watch_file .env
 
 # Use the flake development environment
 use flake
