--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,15 +50,16 @@ jobs:
     - name: Run tests
       run: make test
 
-    - name: Upload coverage to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.24'
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./coverage.out
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
-        token: ${{ secrets.CODECOV_TOKEN }}
+    # TODO: Re-enable when tests are added to the project
+    # - name: Upload coverage to Codecov
+    #   if: matrix.os == 'ubuntu-latest' && matrix.go-version == '1.24'
+    #   uses: codecov/codecov-action@v4
+    #   with:
+    #     file: ./coverage.out
+    #     flags: unittests
+    #     name: codecov-umbrella
+    #     fail_ci_if_error: false
+    #     token: ${{ secrets.CODECOV_TOKEN }}
 
   lint:
     name: Lint
@@ -87,7 +88,7 @@ jobs:
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v6
       with:
-        version: v1.61.0
+        version: v1.64.8
         args: --timeout=5m --verbose
 
     - name: Run custom lint
